--- a/weather/style.css
+++ b/weather/style.css
@@ -5,21 +5,11 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: rgb(0, 0, 0);
+    background-image: url('https://source.unsplash.com/1600x900/?weather,car,nature,earth,moon');
 }
 
 * {
     font-family: 'Merriweather', serif;
-}
-
-body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    font-family: 'Merriweather', sans-serif;
-    background-image: url('https://source.unsplash.com/1600x900/?weather,car,nature,earth,moon');
 }
 
 .card {
@@ -31,7 +21,8 @@ body::before {
     flex-wrap: wrap;
     z-index: 1;
     margin: 1em;
-    color: beige;
+    color: black;
+    border-color: white;
 }
 
 .card .max-width {
@@ -97,4 +88,15 @@ button:hover {
 
 h1 .temp {
     margin: 0;
+    margin-bottom: 1em;
+}
+
+.flex .description {
+    text-transform: capitalize;
+    margin-left: 8px;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
 }
