--- a/vipfood/style.css
+++ b/vipfood/style.css
@@ -27,12 +27,23 @@ html {
     scroll-padding-top: 6rem;
 }
 
+body {
+    background: #f7f7f7;
+}
+
 section {
     padding: 2rem 9%;
 }
 
-body {
-    background: #f7f7f7;
+.heading {
+    text-align: center;
+    font-size: 3.5rem;
+    padding: 1rem;
+    color: #666;
+}
+
+.heading span {
+    color: var(--red);
 }
 
 .btn {
@@ -68,21 +79,6 @@ body {
 
 .btn:hover {
     color: #fff;
-}
-
-section {
-    padding: 2rem 9%;
-}
-
-.heading {
-    text-align: center;
-    font-size: 3.5rem;
-    padding: 1rem;
-    color: #666;
-}
-
-.heading span {
-    color: var(--red);
 }
 
 header {
@@ -124,6 +120,7 @@ header .navbar a:hover {
     font-size: 3rem;
     cursor: pointer;
     color: #666;
+    border: .1rem solid #666;
     border-radius: .3rem;
     padding: .5rem 1.5rem;
     display: none;
@@ -132,10 +129,10 @@ header .navbar a:hover {
 .home {
     display: flex;
     flex-wrap: wrap;
-    gap: 11.5rem;
+    gap: 1.5rem;
     min-height: 100vh;
     align-items: center;
-    background: url(images/home-bg.jpg) no-repeat;
+    background: url(../images/home-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -166,18 +163,18 @@ header .navbar a:hover {
 }
 
 .home .content h3 {
-    font-size: 3.5rem;
+    font-size: 5rem;
     color: #333;
 }
 
 .home .content p {
     font-size: 1.7rem;
-    color: #333;
+    color: #666;
     padding: 1rem 0;
 }
 
 
-/* responcive quuery */
+/* media queries  */
 
 @media(max-width:991px) {
     html {
@@ -200,8 +197,9 @@ header .navbar a:hover {
         top: 100%;
         left: 0;
         right: 0;
+        background: #f7f7f7;
         border-top: .1rem solid rgba(0, 0, 0, .1);
-        clip-path: polygon(0, 0, 100% 0, 0 0);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
     header .navbar.active {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
@@ -210,13 +208,17 @@ header .navbar a:hover {
         margin: 1.5rem;
         padding: 1.5rem;
         display: block;
+        border: .2rem solid rgba(0, 0, 0, .1);
         border-left: .5rem solid var(--red);
-        background: #ffff;
+        background: #fff;
     }
 }
 
-@media(max-width:991px) {
+@media(max-width:450px) {
     html {
         font-size: 50%;
+    }
+    .order .row form .inputBox input {
+        width: 100%;
     }
 }
